k8s-manifests/files-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: files-service
  namespace: cache-me-if-you-can-genai
  labels:
    app: files-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: files-service
  template:
    metadata:
      labels:
        app: files-service
    spec:
      containers:
        - name: files-service
          image: ghcr.io/aet-devops25/team-cache-me-if-you-can/files-service:latest
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 90
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 90
            periodSeconds: 30
