k8s-manifests/files-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: files-service
  namespace: cache-me-if-you-can-genai
  labels:
    app: files-service
spec:
  selector:
    app: files-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: ClusterIP
