k8s-manifests/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: cache-me-if-you-can-genai
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql
  type: ClusterIP
